force-app/main/default/objects/Loan__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <label>Application ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>