force-app/main/default/objects/Loan__c/fields/Credit_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Created_Date__c</fullName>
    <label>Application Created Date</label>
    <type>Date</type>
</CustomField>