force-app/main/default/objects/Loan__c/fields/Credit_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Credit_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Exemption</label>
    <type>Checkbox</type>
</CustomField>