force-app/main/default/objects/Loan__c/fields/Credit_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Modified_Date__c</fullName>
    <label>Application Modified Date</label>
    <type>Date</type>
</CustomField>