force-app/main/default/objects/Loan__c/fields/Credit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Requested__c</fullName>
    <label>Credit Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>