force-app/main/default/objects/Loan__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Vehicle Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flint</fullName>
            </value>
            <value>
                <fullName>Flare</fullName>
            </value>
            <value>
                <fullName>Flash</fullName>
                <default>true</default>
                <label>Flash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>