force-app/main/default/objects/Loan__c/fields/Web_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_ID__c</fullName>
    <externalId>true</externalId>
    <label>Web ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>