force-app/main/default/objects/Loan__c/validationRules/Validate_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>Interest__c &lt; 0.02 || Interest__c &gt; 0.09</errorConditionFormula>
    <errorDisplayField>Interest__c</errorDisplayField>
    <errorMessage>Interest rate must be between 2% and 9%.</errorMessage>
</ValidationRule>